fixing the ai part
fixing the ai part

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY= AIzaSyDdxpvgQ47ybBAS5WGrQprOQsYbMWbnuf0
 DATABASE_URL=postgresql://user:password@localhost:5432/mydb
